--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "axios": "^0.21.0",
     "ckeditor4-react": "^1.3.0",
     "dotenv": "^8.2.0",
+    "formik": "^2.2.6",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -27,8 +30,9 @@
     "reactstrap": "^8.7.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "simple-react-validator": "^1.5.0",
-    "web-vitals": "^0.2.4"
+    "simple-react-validator": "^1.6.0",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
